XRENDERING-701: Introduce a "source" parameter in the content macro
* improve codestyle

Co-authored-by: Manuel Leduc <manuel.leduc@xwiki.com>